--- a/app/src/main/res/layout/kb_reader.xml
+++ b/app/src/main/res/layout/kb_reader.xml
@@ -21,7 +21,7 @@
             <TextView
                 android:id="@+id/textContent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="9dp"
                 android:layout_marginRight="6dp"
